--- a/src/MultiSelect.css
+++ b/src/MultiSelect.css
@@ -50,6 +50,7 @@
     border-radius: none;
     color: inherit;
     white-space: nowrap;
+    margin-bottom: 0;
 }
 
 .singleChip i, .singleChip img {
@@ -122,6 +123,7 @@
 
 .singleSelect {
     padding-right: 20px;
+    display: flex;
 }
 
 li.groupHeading {
